@@ -35,10 +35,10 @@ class SystemResourceTest extends AbstractBootTest {
 		Assertions.assertTrue(System.currentTimeMillis() >= systemVo.getDate().getDate().getTime());
 		Assertions.assertTrue(System.currentTimeMillis() - 1000 < systemVo.getDate().getDate().getTime());
 		Assertions.assertFalse(systemVo.getFiles().isEmpty());
-		Assertions.assertTrue(systemVo.getFiles().get(0).getFreeSpace() > 0);
-		Assertions.assertTrue(systemVo.getFiles().get(0).getTotalSpace() > 0);
-		Assertions.assertTrue(systemVo.getFiles().get(0).getUsableSpace() > 0);
-		Assertions.assertFalse(systemVo.getFiles().get(0).getAbsolutePath().isEmpty());
+		Assertions.assertTrue(systemVo.getFiles().getFirst().getFreeSpace() > 0);
+		Assertions.assertTrue(systemVo.getFiles().getFirst().getTotalSpace() > 0);
+		Assertions.assertTrue(systemVo.getFiles().getFirst().getUsableSpace() > 0);
+		Assertions.assertFalse(systemVo.getFiles().getFirst().getAbsolutePath().isEmpty());
 	}
 
 	@Test
